Fixed behaviour for ctrl and shift clicking SelectLists

--- a/src/components/general/SelectList.css
+++ b/src/components/general/SelectList.css
@@ -10,7 +10,12 @@
     width: 100%;
     height: calc(100% - 110px);
     flex: 1;
-}
+    
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
 
 .selectItem {
     display: block;
